@@ -149,6 +149,7 @@
                 <configuration>
                     <argLine>
                         --add-opens wtf.metio.ilo/wtf.metio.ilo.cli=ALL-UNNAMED
+                        --add-opens wtf.metio.ilo/wtf.metio.ilo.converter=ALL-UNNAMED
                         --add-opens wtf.metio.ilo/wtf.metio.ilo.exec=ALL-UNNAMED
                         --add-opens wtf.metio.ilo/wtf.metio.ilo.model=ALL-UNNAMED
                     </argLine>
